# investment-tracker-haskell

./: .gitignore  CHANGELOG.md  investment-tracker-haskell.cabal  investment.csv
app/: Main.hs  Request.hs  add_invest.hs  csv.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: investment-tracker-haskell-0.1.0.0-inplace.conf  package.cache
