cabal-version:      2.4
name:               investment-tracker-haskell
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     app 
  exposed-modules:    Main, Csv, Request
  build-depends:      aeson , base , req, bytestring, text, dates, cassava, vector, json, utf8-string, bytestring  
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise



-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:


executable main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Request, Csv 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, investment-tracker-haskell, aeson, req, bytestring, text, dates, cassava, vector, json, utf8-string, bytestring 
    hs-source-dirs:   app
    default-language: Haskell2010

executable add_invest
    main-is:          add_invest.hs

    -- Modules included in this executable, other than Main.
    other-modules: Request, Csv 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, investment-tracker-haskell, aeson, req, bytestring, text, dates, cassava, vector, utf8-string, bytestring 
    hs-source-dirs:   app
    default-language: Haskell2010

